--- a/roles/run_container/templates/Dockerfile.j2
+++ b/roles/run_container/templates/Dockerfile.j2
@@ -5,6 +5,10 @@ RUN apt-get upgrade -y
 RUN apt-get install -y apache2
 RUN apt-get install -y systemctl
 
+{% for module in apache2_enabled_modules %}
+RUN apt-get install -y {{ module }}
+{% endfor %}
+
 COPY {{ apache2_config_path }} {{ apache2_config_path }}
 {% for dir in apache2_content_path %}
 COPY {{ dir }} {{ dir }}
