--- a/roles/run_container/templates/Dockerfile.j2
+++ b/roles/run_container/templates/Dockerfile.j2
@@ -5,7 +5,7 @@ FROM {{ ubuntu_container_image }}
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install -y apache2
-RUN apt-get install -y systemctl
+#RUN apt-get install -y systemctl
 
 COPY {{ apache2_config_path }} {{ apache2_config_path }}
 
@@ -18,12 +18,16 @@ COPY {{ dir }} {{ dir }}
 # RUN apt-get install -y {{ module }}
 # {% endfor %}
 
-RUN service apache2 start
-RUN a2dissite 000-default
-RUN service apache2 reload
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# RUN service apache2 start
+# RUN a2dissite 000-default
+# RUN service apache2 reload
 
 {% for port in webservice_ports %}
 EXPOSE {{ port }}
 {% endfor %}
 
-CMD ["apachectl", "-D", "FOREGROUND"]
+ENTRYPOINT ["/entrypoint.sh"]
+# CMD ["apachectl", "-D", "FOREGROUND"]
