--- a/roles/run_container/templates/Dockerfile.j2
+++ b/roles/run_container/templates/Dockerfile.j2
@@ -14,6 +14,7 @@ COPY {{ dir }} {{ dir }}
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
+RUN apt-get install -y ufw
 RUN ufw reset
 RUN ufw default deny incoming
 RUN ufw default allow outgoing
