--- a/roles/run_container/templates/Dockerfile_nginx.j2
+++ b/roles/run_container/templates/Dockerfile_nginx.j2
@@ -5,14 +5,14 @@ RUN apt-get upgrade -y
 RUN apt-get install -y nginx
 
 
-COPY {{ nginx_config_path }}* {{ nginx_config_path }}
+COPY {{ nginx_config_path }} {{ nginx_config_path }}
 
 {% for dir in nginx_content_path %}
-COPY {{ dir }}* {{ dir }}
+COPY {{ dir }} {{ dir }}
 {% endfor %}
 
 {% for file in nginx_ssl_certs_path %}
-COPY {{ file }}* {{ file }}
+COPY {{ file }} {{ file }}
 {% endfor %}
 
 
