--- a/roles/run_container/templates/Dockerfile_nginx.j2
+++ b/roles/run_container/templates/Dockerfile_nginx.j2
@@ -4,16 +4,17 @@ RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get install -y nginx
 
+COPY /backup/* /
 
-COPY {{ nginx_config_path }} {{ nginx_config_path }}
+# COPY {{ nginx_config_path }} {{ nginx_config_path }}
 
-{% for dir in nginx_content_path %}
-COPY {{ dir }} {{ dir }}
-{% endfor %}
+# {% for dir in nginx_content_path %}
+# COPY {{ dir }} {{ dir }}
+# {% endfor %}
 
-{% for file in nginx_ssl_certs_path %}
-COPY {{ file }} {{ file }}
-{% endfor %}
+# {% for file in nginx_ssl_certs_path %}
+# COPY {{ file }} {{ file }}
+# {% endfor %}
 
 
 COPY entrypoint.sh /entrypoint.sh
